logoutput/config/log-output-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: logoutput-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      volumes:
        - name: shared-log
          emptyDir: {}
        - name: config-map
          configMap:
            name: config-log
      containers:
        - name: logoutput
          image: LOGOUTPUT/IMAGE
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files
            - name: config-map
              mountPath: /usr/src/app/info
          readinessProbe:
            httpGet:
              path: /status
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /status
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
            failureThreshold: 3
        - name: logoutputfile
          image: wilky2/logoutputfile:2.1
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files
