logoutput/config/log-output-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: logoutput-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
